--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="app/app.js"></script>
     <script src="app/userCtrl.js"></script>
     <script src="app/userservice.js"></script>
+    <script src="app/localStorageService.js"></script>
 </head>
 <body ng-app="MyApp">
   <div ng-controller="userCtrl as uc">
